# PDF2Markdown

./: .gitignore  README.md
input/: README.md
output/: README.md
tool_v0/: README.md  VERSION.txt  run_api.cmd  run_local.cmd
tool_v0/converter_core/: __init__.py  __main__.py  batch.py  clean_output.py  cli.py  credentials.py  delivery.py  extract.py  formulas.py  mathpix.py  mineru.py  mineru_worker.py  models.py  pipeline.py  progress.py  recover_mineru.py  refine_markdown.py  render.py  user_customizations.py  writer.py
tool_v0/converter_core/providers/: __init__.py  base.py  mineru_api.py
tool_v0/development/: .gitignore  AGENTS.md  pyproject.toml
tool_v0/development/installer/: README.md  build-installer.ps1  install.ps1  launch.vbs
tool_v0/development/tests/: test_cli.py  test_delivery.py  test_formulas.py  test_mathpix.py  test_mineru.py  test_refine_markdown.py  test_user_customizations.py
