[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2markdown-local"
version = "0.1.0"
description = "Offline-first PDF to Obsidian Markdown converter"
requires-python = ">=3.10"
dependencies = ["pdfplumber>=0.10", "pypdf>=4", "Pillow>=10", "requests>=2.31", "httpx>=0.27", "rich>=13"]

[project.optional-dependencies]
local-ocr = ["pix2text>=1.1.4"]

[project.scripts]
pdf2markdown = "converter_core.cli:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["converter_core*"]

